@@ -54,7 +54,7 @@ REQUEST HCOMBOBOX, HCONTROL, HSTATUS, HSTATIC, HSTATICLINK, HBUTTON, HGROUP, HLI
 REQUEST HCUSTOMWINDOW, HDIALOG, HEDIT
 REQUEST HGRAPH, HMONTHCALENDAR, HOWNBUTTON
 REQUEST HPANEL, HPANELSTS, HPRINTER, HPROGRESSBAR, HRADIOGROUP, HRADIOBUTTON
-REQUEST HSAYIMAGE, HSAYBMP, HSAYICON, HSPLITTER, HTAB, HTIMER, HTRACK
+REQUEST HSAYIMAGE, HSAYBMP, HSAYICON, HSPLITTER, HTAB, HTIMER, HTRACK, HLENTA
 REQUEST HTOOLBAR, HTREENODE, HTREE 
 REQUEST HUPDOWN, HWINDOW, HMAINWINDOW, HWINPRN, HMENU 
 REQUEST HWG_CHR, HWG_SUBSTR, HWG_LEFT, HWG_LEN
