@@ -537,7 +537,7 @@ $(OBJ_DIR)\hrebar.c : $(SRC_DIR)\hrebar.prg
 $(OBJ_DIR)\hrebar.obj : $(OBJ_DIR)\hrebar.c
    $(CC_EXE) $(CFLAGS) -fo$@ $**
 
-$(OBJ_DIR)\hhlenta.c : $(SRC_DIR)\hlenta.prg
+$(OBJ_DIR)\hlenta.c : $(SRC_DIR)\hlenta.prg
    $(HARBOUR_EXE) $(HARBOURFLAGS) $** -o$@
 
 $(OBJ_DIR)\hlenta.obj : $(OBJ_DIR)\hlenta.c
