@@ -10,6 +10,18 @@
 
 
 2021-04-23 15:05 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
+  * source/winapi/hlenta.prg
+  * source/gtk/hlenta.prg
+    * header added
+  * include/hwgextern.ch
+    * HLenta item added.
+  * makefile.bc
+  * makefile.wc
+    ! Typo fixed.
+  * utils/tutorial/tutor_eng.xml
+    * Small sample of using HLenta added. Will be extended.
+
+2021-04-23 15:05 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
   + source/winapi/hlenta.prg
   + source/gtk/hlenta.prg
     + New control added, class HLenta.
